<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".main_screen.MainActivity">

    <ImageView
        android:id="@+id/github_qr_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription=""
        android:src="@drawable/my_github_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/import_QR_btn"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:text="@string/importQR"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_qr_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera_QR_btn"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:text="@string/scanQR"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/import_QR_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generate_btn"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:text="@string/generateQR"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_QR_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>